app/styles/main.css
body {
  padding-top: 50px;
  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 16px;
}

h1, h2 {
  font-weight: bold;
}

h1:first-child, h2:first-child {
  margin-top: 0;
}

.navbar-default {
  background-color: #ffffff;
}
/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

.lead {
  font-weight: bold;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  padding-bottom: 20px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
  img.sponsor {
    max-width: 280px;
    max-height: 160px;
  }
}

@media (min-width: 1200px) {
  .container {
    max-width: 1170px;
  }
  img.sponsor {
    max-width: 460px;
    max-height: 200px;
  }
}

@media (max-width: 767px) {
  img.sponsor {
    max-width: 280px;
    max-height: 100px;
  }
}


@media (min-width: 0px) {
  .location img {
    width: 260px;
  }
}

@media (min-width: 768px) {
  .location img {
    width: 350px;
  }
}

@media (min-width: 1200px) {
  .location img {
    width: 570px;
  }
}

.sponsor-image {
  margin-bottom: 20px;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

.nav {
  float: left;
}

.icon-bar {
  background-color: #334455;
}

.main-header {
  height: 40px;
  margin-bottom: 30px;
  background-color: #DB1127;
}

.main {
  background-image: url('../images/houses-bg.png');
  background-size: 1800px 100%;
  background-repeat: no-repeat;
}

.main p {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  margin-top: 20px;
  margin-bottom: 0px;
}

.main-footer {
  height: 40px;
  margin-top: 30px;
  margin-bottom: 0px;
  background-color: #110071;
}

.images {
  display: block;
  position: relative;
  text-align: center;
}

.navbar-header a, .navigation a {
  color: #000;
}

.btn-group {
  margin-bottom: 20px;
}

.main-section a {
  width: 200px;
}

.main-section {
  padding: 60px 15px;
}

.main-section-odd {
  background-color: #EFEFEF;
}

.btn-primary {
  background-color: #0088cc; background-image: -webkit-gradient(linear, left top, left bottom, from(#0088cc), to(#0055cc));
  background-image: -webkit-linear-gradient(top, #0088cc, #0055cc);
  background-image: -moz-linear-gradient(top, #0088cc, #0055cc);
  background-image: -ms-linear-gradient(top, #0088cc, #0055cc);
  background-image: -o-linear-gradient(top, #0088cc, #0055cc);
  background-image: linear-gradient(to bottom, #0088cc, #0055cc);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#0088cc, endColorstr=#0055cc);
}

@media only screen and (max-width: 768px) {
  .navbar-right {
    display: none;
  }
}

.speakers img, img.profile {
  width: 140px;
  height: 140px;
}

.speakers .col-md-4 {
  margin-top: 20px;
}

.organizers h3 {
  font-size: 12pt;
}

.location .row {
  padding: 0 !important;
   margin: 0 !important;
}

#organizers .row > div {
  margin-bottom: 20px;
}

.cfp {
  padding: 30px 30px 30px 30px;
}

/*
.schedule-section {
  width: 460px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}*/

td {
  text-align: center;
}

td.special {
  background-color: #EFEFEF;
  font-weight: bold;
}

td.normal {
  background-color: #ffffff;
  width: 160px;
}
th {
  text-align: center;
}
th.header {
  font-size: 16pt;
}

